<resources>
    <string name="app_name">MAFProject</string>
    <string name="action_settings">Settings</string>

    <!-- activity_main.xml -->
    <string name="into_toast">Toast测试</string>
    <string name="into_image">Image测试</string>
    <string name="into_net">网络测试</string>
    <string name="into_print">打印机测试</string>
    <string name="into_html">html测试</string>
    <string name="into_chart">图形库测试</string>
    <string name="into_collapsing">收缩效果测试</string>
    <string name="into_sort">索引列表测试</string>
    <string name="into_code">二维码测试</string>
    <string name="into_hot_fix">热修复测试</string>
    <string name="into_main_test">进入测试界面</string>
    <string name="into_list_load">进入加载更多</string>
    <string name="into_slide_switch">自定义控件</string>
    <string name="into_system_test">测试系统相关</string>
    <string name="into_my_camera">自定义相机</string>
    <string name="into_x_utils">进入xUtils测试界面</string>
    <string name="into_xposed">进入xposed测试界面</string>

    <!-- activity_toast.xml -->
    <string name="toast_short">显示ShortToast</string>
    <string name="toast_long">显示LongToast</string>
    <string name="toast_duration">显示自定义时间Toast</string>

    <!-- activity_print.xml -->
    <string name="bluetooth_status">当前蓝牙状态：打开</string>
    <string name="switch_bluetooth">打开</string>
    <string name="search">开始搜索</string>

    <!-- activity_chart.xml -->
    <string name="show_pie">显示饼状图</string>
    <string name="show_bar">显示柱状图</string>
    <string name="show_linechart">显示折线图</string>
</resources>
